Pics adapted to responsive design | Solved some minor spacing issues

--- a/css/master.css
+++ b/css/master.css
@@ -19,7 +19,7 @@ medium - 500
     --font-normal: 300;
     --font-bold: 500;
 
-    --spacing: 1em;
+    --spacing: 1rem;
     --max-width: 1400px;
 
 }
@@ -48,12 +48,12 @@ img:hover {
 body {
     font-family: 'Rasa', serif;
     font-weight: var(--font-normal);
-    font-size: 1em;
+    font-size: 1rem;
     color: var(--text-base)
 }
 
 section {
-    padding: var(--spacing * 3) 0;
+    padding: calc(var(--spacing) * 2) 0;
 }
 
 h2 {
@@ -128,55 +128,32 @@ main {
 /* -- Meet the team -- */
 
 .team-grid {
-    padding-top: 25px;
-    display: grid;
-    grid: auto-flow / 1fr;
-    justify-items: center;
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     text-align: center;
+    gap: 50px;
+}
+
+.team-grid figure {
+    width: 60%;
+    margin: 0 auto;
+    padding-bottom: 50px;
 }
 
 .diamond-pic {
-    width: 150px;
-    height: 150px;
-    rotate: 45deg;
-    position: relative;
-    background-color: gray;
+    width: 100%;
+    transform: rotate(45deg);
     overflow: hidden;
-    margin: 70px 0;
 }
 
 .diamond-pic img {
-    width: 200%;
-    top: -75px;
-    left: -75px;
-    rotate: -45deg;
-    position: absolute;
+    transform: rotate(-45deg) scale(2);
     filter: grayscale(100%);
-    padding: 45px;
 }
 
-.diamond-pic:hover {
-    width: 150px;
-    height: 150px;
-    rotate: 0deg;
-    position: relative;
-    background-color: gray;
-    overflow: hidden;
-    margin: 70px 0;
-    transition: 2s;
-}
 
-.diamond-pic:hover img {
-    width: 200%;
-    top: -75px;
-    left: -75px;
-    rotate: 0deg;
-    position: absolute;
-    filter: grayscale(100%);
-    padding: 45px;
-    filter: none;
-    transition: 2s;
-}
 
 .team-grid figure p {
     margin-top: 10px;
@@ -184,10 +161,11 @@ main {
 
 .team-grid figure p:nth-child(2) {
     color: var(--text-title);
+    margin-top: 70px;
 }
 
 .team-grid figure p:nth-child(3) {
-    font-size: 80%;
+    font-size: 90%;
 }
 
 .meet-team>div:nth-child(3) {
@@ -201,13 +179,6 @@ main {
     text-decoration: none;
     color: var(--text-title);
     transition: 1s;
-}
-
-.meet-team a:hover {
-    text-decoration: underline;
-    text-decoration-color: var(--text-highlight);
-    text-decoration-thickness: 2px;
-    text-underline-offset: 4px;
 }
 
 /* -- Our expertise -- */
@@ -328,6 +299,10 @@ footer {
         padding-left: 0;
     }
 
+    header a {
+        transition: 1s;
+    }
+
     header a:hover {
         text-decoration: underline;
         color: var(--text-highlight);
@@ -369,28 +344,72 @@ footer {
 
     /* -- Meet the team -- */
 
+    /* -- Meet the team -- */
+
     .team-grid {
-        padding-top: 25px;
-        display: grid;
-        grid: auto-flow / 1fr 1fr 1fr 1fr;
-        row-gap: 2%;
+        padding-top: 75px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-items: center;
+        text-align: center;
+        gap: 40px 120px;
+    }
+
+    .team-grid figure {
+        width: calc(25% - 120px);
     }
 
     .diamond-pic {
-        margin: 50px 0;
+        transform: rotate(45deg);
+        overflow: hidden;
+    }
+
+    .diamond-pic img {
+        transform: rotate(-45deg) scale(2);
+        filter: grayscale(100%);
     }
 
     .diamond-pic:hover {
-        margin: 50px 0;
+        transform: rotate(0);
+        overflow: hidden;
+        transition: 1.5s;
+    }
 
+    .diamond-pic:hover img {
+        transform: rotate(0)scale(2);
+        filter: none;
+        transition: 1.5s;
+    }
+
+
+
+    .team-grid figure p {
+        margin-top: 10px;
+    }
+
+    .team-grid figure p:nth-child(2) {
+        color: var(--text-title);
+        margin-top: 60px;
+    }
+
+    .team-grid figure p:nth-child(3) {
+        font-size: 80%;
     }
 
     .meet-team>div:nth-child(3) {
-        padding: 50px 15px;
-        margin-top: 60px;
-        text-align: center;
+        width: 100%;
+        background-color: rgb(236, 236, 236);
+        padding: 15px;
+        margin-top: 15px;
     }
 
+    .meet-team a:hover {
+        text-decoration: underline;
+        text-decoration-color: var(--text-highlight);
+        text-decoration-thickness: 2px;
+        text-underline-offset: 4px;
+    }
 
 
 
